--- a/kenjhi/Modo Administrador.resx
+++ b/kenjhi/Modo Administrador.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="picEmpleados.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAADeMSURBVHhe7d0J
+        vwAADr8BOAVTJAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAADeMSURBVHhe7d0J
         2LflnP/xu32nfdFip4X81RFFJGWMUJlUNCplK1vMQWUYYgwRKSUpJVkSxiBLJFmSsURpZ0iL9kL7/v9/
         vvPo//R4Ps/9/O7ffV33/f2e1/t9HK/jGDOOY57rPM/7vK/797uWCaIZbjFZR54mu8ib5TD5spwmZ8ov
         5RL5vdwkN8v/BdCLWyR+zm6Q+Jn7rfxUTpET5MPyNtldtpT4+V1UiIhsS8jGEpvGh+R7cqXcK24TAlDH
