--- a/kenjhi/Properties/Resources.resx
+++ b/kenjhi/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="expediente" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\expediente.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="circulo-amarillo-panel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\circulo-amarillo-panel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
